--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:users-db}:3306/${DB_DATABASE:users}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:users-db}:3306/${DB_DATABASE:users}
+#spring.datasource.username=${DB_USER}
+#spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
@@ -9,3 +9,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.application.name=SecurityDemo
 server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/${DB_DATABASE:users}
+spring.datasource.username=${DB_USER:user}
+spring.datasource.password=${DB_PASSWORD:marcusedlund}
